# mlops

./: .gitignore  README.md  package-lock.json
.github/workflows/: ci-cd.yml
app/: package-lock.json  package.json
app/public/: template.csv
app/src/app/: globals.css  page.tsx
app/src/app/components/: HeaderSimple.module.css  HeaderSimple.tsx
app/src/app/property/: BatchForm.tsx  Chat.tsx  Form.tsx  FormSkeleton.tsx  actions.ts  loading.tsx  page.tsx  presets.ts
property-predictor/: .dvcignore  .gitignore  01_Melbourne_Residential.csv.dvc  datasets.dvc  experiments.dvc  pyproject.toml  requirements.txt
property-predictor/.dvc/: config
property-predictor/bentoml/: service.py
property-predictor/bentoml/extra/: extract_categorical_features.py
property-predictor/bentoml/extra/ts-data/: sellingMethods.ts
property-predictor/configs/: config.yaml
property-predictor/experiments/: final_housing_price_model.pkl  melbourne_pipeline.pkl
property-predictor/notebooks/: PropertyPrices.py
src/app/: layout.tsx
src/app/post-prediction/: page.tsx
tests/: test_property_price.py  test_used_car_price.py
used-car-predictor/: .gitignore  datasets.dvc  pyproject.toml
used-car-predictor/.dvc/: config
used-car-predictor/bentoml/: brand_model_frequency.py  car_price_pipeline.pkl  requirements.txt  service.py
used-car-predictor/bentoml/extra/: extract_brands.py  extract_brands_tsx.py  test.py
used-car-predictor/configs/: config.yaml
used-car-predictor/experiments/: car_price_pipeline.pkl
used-car-predictor/notebooks/: EDA.ipynb  ML Pipeline.ipynb
(+13 files in other folders)
