[project]
name = "used-car-predictor"
version = "0.1.0"
description = ""
authors = [
    {name = "ethan",email = "misterworker2024@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "kaleido (==0.2.1)",
    "pycaret (==3.3.2)",
    "pandas (==2.1.4)",
    "seaborn (==0.13.2)",
    "mlflow (==2.15.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "dvc (>=3.59.1,<4.0.0)",
    "dvc-gs (>=3.0.1,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
